# EvoSkill

./: .gitignore  README.md  output.txt  pyproject.toml  run.sh  run_loop_and_eval.sh
.claude/: program.yaml
.claude/skills/brainstorming/: SKILL.md
.claude/skills/calculation-methodology-validation/: SKILL.md
.claude/skills/data-extraction-verification/: SKILL.md
.claude/skills/numeric-output-formatting/: SKILL.md
notebooks/: dabstep.ipynb  eval.ipynb  self_improve_loop.ipynb  test.ipynb
scripts/: read_failed_traces.py  run_eval_livecodebench.py  run_eval_sealqa.py  run_loop.py  run_loop_sealqa.py  split_officeqa_easy.py
src/: __init__.py  feedback_descent.py
src/agent_profiles/: __init__.py  base.py
src/agent_profiles/livecodebench_agent/: __init__.py  livecodebench_agent.py
src/agent_profiles/sealqa_agent/: __init__.py  sealqa_agent.py
src/api/: task_registry.py
src/cache/: run_cache.py
src/evaluation/: sealqa_scorer.py
src/evaluation/livecodebench/: __init__.py  livecodebench_data.py  livecodebench_format.py  livecodebench_scorer.py
src/loop/: __init__.py  config.py  helpers.py  runner.py
src/registry/: manager.py
