[project]
name = "deep-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.16",
    "datasets>=4.4.1",
    "deepagents>=0.3.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.2",
    "langgraph>=1.0.4",
    "mlflow>=3.7.0",
    "pandas>=2.3.3",
    "torch>=2.9.1",
]
